--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">Bugzila</a>
+    <a class="navbar-brand" href="<%= root_url %>">Bugzila</a>
   </div>
   <div class="container">
     <ul class="nav navbar-nav">
