--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,8 +1,16 @@
-<h2> Start New Project </h2>
+<div class="container">  
+  <div class="row">
+    <div class="col-sm-6 col-md-4 col-md-offset-4">
+      <h1 class="text-center login-title">Start New Project</h1>
+      <div class="account-wall">
 <%= form_for @project do |new_project| %>
-<div class="field">
+<div>
     <%= new_project.label :title %>
-    <%= new_project.text_field :title %>
+    <%= new_project.text_field :title, class: "form-control"  %><br>
 </div>
-<div class="actions"> <%= new_project.submit %></div>
+<div class="field"><%= new_project.submit "Create", class: "btn btn-lg btn-success btn-block"  %></div>
 <% end  %>
+</div>
+</div>
+</div>
+</div>
